Fix phone view
Heading font too large for phone view

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h4, h5 {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     line-height: 1.5;
 }
 
